# Tokenizer_Fairness_Dialect

./: Intrinsic_Analysis_FLORES.ipynb  Parity_Analysis_FLORES.ipynb  README.md
Extrinsic_Analysis/EQA/: llama_EQA_inference.py  llama_classification_EQA.py  mBert_EQA.py  phi_EQA_inference.py  phi_classification_EQA.py  prompts_QA.py
Extrinsic_Analysis/Topic_Classification/: llama_TC_inference.py  llama_classification_TC.py  mBert_TC.py  phi_TC_inference.py  phi_classification_TC.py  prompts_TC.py
Information-Parity-dialect/: README.md  compute_IP_nw.py  eval_flores_200.py  eval_flores_200_nw.py  flores_information_parity_results.json  flores_information_parity_results_Falcon.json  flores_information_parity_results_Gemma.json  flores_information_parity_results_Llama3.json  flores_information_parity_results_Mistral.json  flores_information_parity_results_Phi-Mini.json  flores_information_parity_results_SILMA.json  pyproject.toml  readme.txt
Intrinsic_Analysis/tokenization-fairness_dialect/: compute_TP.py  (+2 more)
correlation_scripts/: TP_IP.py  compute_avg_categoryBased.py  compute_avge_categoryBased_EQA.py  compute_correlation_EQA.py  compute_correlation_EQA_TP.py  compute_correlation_TC.py  compute_correlation_TConTP.py  merge_Phi_llama_F1_TC.py  merged_ip_tp_metrics.csv  merged_lang_metrics_Phi_EQA.csv  merged_lang_metrics_llama.csv  merged_lang_metrics_llama_EQA.csv  merged_macro_f1_TC_Phi_llama.csv  metrics_output.csv  metrics_output1.csv  metrics_output_Phi_EQA.csv  metrics_output_llama3.csv  metrics_output_llama_EQA.csv  metrics_output_llama_Instruct_EQA.csv
(+32 files in other folders)
